--- a/main.css
+++ b/main.css
@@ -79,28 +79,28 @@ footer a {
 .button-top-left {
   border-radius: 100% 0 0 0;
   margin: 20px 0 0 20px;
-  background-color: green;
+  background-color: rgb(88, 138, 135);
   border: thick solid rgb(36, 53, 0);
 }
 
 .button-top-right {
   border-radius: 0 100% 0 0;
   margin: 20px 20px 0 0;
-  background-color: red;
+  background-color: rgb(182, 198, 190);
   border: thick solid rgb(83, 12, 12);
 }
 
 .button-bottom-left {
   border-radius: 0 0 0 100%;
   margin: 0 0 20px 20px;
-  background-color: yellow;
+  background-color: rgb(223, 217, 202);
   border: thick solid rgb(130, 124, 13);
 }
 
 .button-bottom-right {
   border-radius: 0 0 100% 0;
   margin: 0 20px 20px 0;
-  background-color: blue;
+  background-color: rgb(239, 201, 191);
   border: thick solid rgb(27, 14, 100);
 }
 
