--- a/main.css
+++ b/main.css
@@ -135,7 +135,7 @@ footer a {
   height: 30px;
   border-radius: 10px;
   border: solid thin rgb(179, 127, 112);
-  background-color: #300;
+  background-color: rgb(134, 95, 84);
 }
 
 .center {
