--- a/main.css
+++ b/main.css
@@ -104,7 +104,7 @@ footer a {
   border: thick solid rgb(179, 151, 143);
 }
 
-.btn-primary {
+.btn btn-primary {
   background-color: rgb(224, 175, 97);
 }
 
