--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  background-color: rgb(232, 233, 225) !important;
 }
 
 footer {
